<resources>
    <string name="app_name">My Application</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Secound Number</string>
    <string name="answer">Answer</string>

    <string name="Plus">+</string>
    <string name="subtract">-</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
</resources>